Parser.java
/* Parser.java */
/* Generated By:JavaCC: Do not edit this line. Parser.java */
/** MA imports */

import parserElements.*;
import parserExceptions.*;
import compilerElements.*;
import java.util.Map;
import java.util.HashMap;
import java.util.List;
import java.util.ArrayList;
import java.util.Set;
import java.util.HashSet;
import java.io.FileInputStream;
import java.io.FileNotFoundException;
/** ID lister. */
public class Parser implements ParserConstants {

  private static final String OUT_FILE = "-o";

  private static final String IN_FILE = "-i";

  private static final String JAR_JASMINE = "-j";
  /** Main entry point. */
  public static void main(String args[]) {
    boolean compile = false;
    String filename = null;
    String inputFile = null;
    String jasminJar = null;
    for(int i=0; i<args.length; i++){
      switch(args[i]){
        case OUT_FILE:
          if(++i<args.length){
            filename = args[i];
            if(!filename.endsWith(".j"))
              filename = String.format("%s.j", filename);
            compile = true;
          }else{
            System.out.println(String.format("Flag %s need at least 1 argument!", args[i-1]));
            System.exit(1);
          }
          break;
        case IN_FILE:
          if(++i<args.length){
            inputFile = args[i];
          }else{
            System.out.println(String.format("Flag %s need at least 1 argument!", args[i-1]));
            System.exit(1);
          }
          break;
        case JAR_JASMINE:
          if(++i<args.length){
            jasminJar = args[i];
          }else{
            System.out.println(String.format("Flag %s need at least 1 argument!", args[i-1]));
            System.exit(1);
          }
          break;
        default:
          System.out.println(String.format("Flag %s not recognized!", args[i]));
          System.exit(1);
      }
    }
    Parser parser;
    if(inputFile==null)
      parser = new Parser(System.in);
    else
      try{
        parser = new Parser(new FileInputStream(inputFile));
      }catch(FileNotFoundException e){
        System.out.println(e.getMessage());
        System.exit(1);
        return;
      }
    if(compile)
      compiler(parser, filename, jasminJar);
    else
      interpreter(parser);
  }

  private static final void interpreter(Parser parser){
      ASTNode exp;
      Env env = new Env<IValue>();
      while (true) {
        try {
          System.out.print("> ");
          exp = parser.Start();
          exp.eval(env);//.show();
          System.out.println();
        } catch (Exception e) {
          System.out.println (String.format("Syntax Error: %s",e.getMessage()));
          parser.ReInit(System.in);
        }
      }
    }

    private static final void compiler(Parser parser, String filename, String jasminJar){
      ASTNode exp;
      Env env = new Env<FrameComp>();
      CodeBlock comp = CodeBlock.getInstance();
      try {
        System.out.print("> ");
        exp = parser.Start();
        exp.compile(env, comp);
        comp.dump(filename);
        if(jasminJar!=null)
          comp.compJasminWin(filename, jasminJar);
      } catch (Exception e) {
        System.out.println(String.format("Syntax Error: %s",e.getMessage()));
      }
    }

  static final public ASTNode Start() throws ParseException {ASTNode t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PRINTLN:
    case FUN:
    case NEW:
    case IF:
    case WHILE:
    case NOT:
    case DEASSIGN:
    case LET:
    case Bool:
    case Id:
    case Num:
    case PLUS:
    case MINUS:
    case LPAR:{
      t = EM();
      jj_consume_token(FINAL);
      break;
      }
    case QUIT:{
      jj_consume_token(QUIT);
      jj_consume_token(LPAR);
      jj_consume_token(RPAR);
      jj_consume_token(FINAL);
t=null;System.exit(0);
      break;
      }
    case CLEAR:{
      jj_consume_token(CLEAR);
      jj_consume_token(FINAL);
t=new ASTBool(false);
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return t;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode EM() throws ParseException {ASTNode t,t2;
    t = E();
    label_1:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
      jj_consume_token(SEMICOLON);
      t2 = EM();
t=new ASTSeq(t,t2);
    }
{if ("" != null) return t;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode E() throws ParseException {Token op;
  ASTNode t1, t2;
    t1 = EA();
    if (jj_2_2(2)) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case GREATER_EQUAL:{
        op = jj_consume_token(GREATER_EQUAL);
        break;
        }
      case GREATER:{
        op = jj_consume_token(GREATER);
        break;
        }
      case LESS_EQUAL:{
        op = jj_consume_token(LESS_EQUAL);
        break;
        }
      case LESS:{
        op = jj_consume_token(LESS);
        break;
        }
      case MATCH:{
        op = jj_consume_token(MATCH);
        break;
        }
      case AND:{
        op = jj_consume_token(AND);
        break;
        }
      case OR:{
        op = jj_consume_token(OR);
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      t2 = EA();
if (op.kind == MATCH)
                        t1 = new ASTEq(t1,t2);
                   else if(op.kind == GREATER)
                        t1 = new ASTGreater(t1,t2);
                   else if(op.kind == GREATER_EQUAL)
                        t1 = new ASTGreaterEq(t1,t2);
                   else if(op.kind == LESS)
                        t1 = new ASTLess(t1,t2);
                   else if(op.kind == LESS_EQUAL)
                        t1 = new ASTLessEq(t1,t2);
                   else if (op.kind == AND)
                        t1 = new ASTAnd(t1,t2);
                   else
                        t1 = new ASTOr(t1,t2);
    } else {
      ;
    }
{if ("" != null) return t1;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode EA() throws ParseException {Token op;
  ASTNode t1, t2;
    t1 = T();
    label_2:
    while (true) {
      if (jj_2_3(2)) {
        ;
      } else {
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:{
        op = jj_consume_token(PLUS);
        break;
        }
      case MINUS:{
        op = jj_consume_token(MINUS);
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      t2 = EA();
if (op.kind == PLUS)
                        t1 = new ASTPlus(t1,t2);
                   else
                        t1 = new ASTSub(t1,t2);
    }
{if ("" != null) return t1;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode T() throws ParseException {Token op;
  ASTNode t1, t2;
  List<ASTNode> pseudoT;
    t1 = F();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ASSIGN:{
      op = jj_consume_token(ASSIGN);
      t2 = E();
t1 = new ASTAssign(t1,t2);
      break;
      }
    case LPAR:{
      jj_consume_token(LPAR);
      pseudoT = AL();
      jj_consume_token(RPAR);
t1 = new ASTApply(pseudoT, t1);
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      label_3:
      while (true) {
        if (jj_2_4(2)) {
          ;
        } else {
          break label_3;
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case TIMES:{
          op = jj_consume_token(TIMES);
          break;
          }
        case DIV:{
          op = jj_consume_token(DIV);
          break;
          }
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        t2 = T();
if(op.kind == TIMES)
                        t1 = new ASTTimes(t1,t2);
                    else
                        t1 = new ASTDiv(t1, t2);
      }
    }
{if ("" != null) return t1;}
    throw new Error("Missing return statement in function");
  }

  static final public List<ASTNode> AL() throws ParseException {Token op;
  ASTNode t1, t2;
  List<ASTNode> params = new ArrayList();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PRINTLN:
    case FUN:
    case NEW:
    case IF:
    case WHILE:
    case NOT:
    case DEASSIGN:
    case LET:
    case Bool:
    case Id:
    case Num:
    case PLUS:
    case MINUS:
    case LPAR:{
      t1 = EM();
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[5] = jj_gen;
          break label_4;
        }
        op = jj_consume_token(COMMA);
        t2 = EM();
params.add(t2);
      }
params.add(t1);
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      ;
    }
{if ("" != null) return params;}
    throw new Error("Missing return statement in function");
  }

/*ASTNode PL():
{
  Token n;
  ASTNode t, t2;
}
{ //map use
  (
    n=<Id> =new TYpe
      (
        <COMMA> n=<Id> =new TYpe
      )

  )?
}*/
  static final public 
ASTNode F() throws ParseException {Token n;
  ASTNode t1, t2, t3;
  Map<String, ASTNode> map = new HashMap();
  Set<String> params = new HashSet();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case Num:{
      n = jj_consume_token(Num);
t1 = new ASTNum(Integer.parseInt(n.image));
      break;
      }
    case Bool:{
      n = jj_consume_token(Bool);
t1 = new ASTBool(Boolean.parseBoolean(n.image));
      break;
      }
    case LPAR:{
      jj_consume_token(LPAR);
      t1 = EM();
      jj_consume_token(RPAR);
      break;
      }
    case MINUS:{
      jj_consume_token(MINUS);
      t1 = F();
t1=new ASTInvertInt(t1);
      break;
      }
    case NOT:{
      jj_consume_token(NOT);
      t1 = F();
t1=new ASTInvertBool(t1);
      break;
      }
    case PLUS:{
      jj_consume_token(PLUS);
      t1 = F();
      break;
      }
    case Id:{
      n = jj_consume_token(Id);
t1 = new ASTId(n.image);
      break;
      }
    case LET:{
      jj_consume_token(LET);
      label_5:
      while (true) {
        n = jj_consume_token(Id);
        jj_consume_token(EQUAL);
        t1 = EM();
t2=map.put(n.image, t1);
          if(t2!=null)
            {if (true) throw new TypeError(String.format("Id (%s) assigned twice at same level!", n.image));}
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case Id:{
          ;
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          break label_5;
        }
      }
      jj_consume_token(IN);
      t2 = EM();
      jj_consume_token(END);
t1 = new ASTLet(
          map,
          t2);
      break;
      }
    case NEW:{
      jj_consume_token(NEW);
      t1 = F();
t1=new ASTRef(t1);
      break;
      }
    case DEASSIGN:{
      jj_consume_token(DEASSIGN);
      t1 = F();
t1=new ASTDeRef(t1);
      break;
      }
    case IF:{
      jj_consume_token(IF);
      t1 = EM();
      jj_consume_token(THEN);
      t2 = EM();
      jj_consume_token(ELSE);
      t3 = EM();
      jj_consume_token(END);
t1 = new ASTIf(t1, t2, t3);
      break;
      }
    case WHILE:{
      jj_consume_token(WHILE);
      t1 = EM();
      jj_consume_token(DO);
      t2 = EM();
      jj_consume_token(END);
t1 = new ASTWhile(t1, t2);
      break;
      }
    case PRINTLN:{
      jj_consume_token(PRINTLN);
      t1 = E();
t1 = new ASTPrintln(t1);
      break;
      }
    case FUN:{
      jj_consume_token(FUN);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case Id:{
          ;
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          break label_6;
        }
        n = jj_consume_token(Id);
if(!params.add(n.image))
            {if (true) throw new TypeError(String.format("Id (%s) assigned twice at same level!", n.image));}
        label_7:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case COMMA:{
            ;
            break;
            }
          default:
            jj_la1[9] = jj_gen;
            break label_7;
          }
          jj_consume_token(COMMA);
        }
      }
      jj_consume_token(APPLY);
      t1 = EM();
      jj_consume_token(END);
t1 = new ASTFunc(t1, params);
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return t1;}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_3R_24()
 {
    if (jj_scan_token(WHILE)) return true;
    return false;
  }

  static private boolean jj_3_1()
 {
    if (jj_scan_token(SEMICOLON)) return true;
    if (jj_3R_8()) return true;
    return false;
  }

  static private boolean jj_3R_23()
 {
    if (jj_scan_token(IF)) return true;
    return false;
  }

  static private boolean jj_3R_10()
 {
    if (jj_3R_12()) return true;
    return false;
  }

  static private boolean jj_3R_22()
 {
    if (jj_scan_token(DEASSIGN)) return true;
    return false;
  }

  static private boolean jj_3R_21()
 {
    if (jj_scan_token(NEW)) return true;
    return false;
  }

  static private boolean jj_3R_8()
 {
    if (jj_3R_11()) return true;
    return false;
  }

  static private boolean jj_3_3()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(37)) {
    jj_scanpos = xsp;
    if (jj_scan_token(38)) return true;
    }
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_3R_9()
 {
    if (jj_3R_10()) return true;
    return false;
  }

  static private boolean jj_3R_20()
 {
    if (jj_scan_token(LET)) return true;
    return false;
  }

  static private boolean jj_3R_19()
 {
    if (jj_scan_token(Id)) return true;
    return false;
  }

  static private boolean jj_3_4()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(39)) {
    jj_scanpos = xsp;
    if (jj_scan_token(40)) return true;
    }
    if (jj_3R_10()) return true;
    return false;
  }

  static private boolean jj_3R_18()
 {
    if (jj_scan_token(PLUS)) return true;
    return false;
  }

  static private boolean jj_3R_17()
 {
    if (jj_scan_token(NOT)) return true;
    return false;
  }

  static private boolean jj_3R_16()
 {
    if (jj_scan_token(MINUS)) return true;
    return false;
  }

  static private boolean jj_3R_15()
 {
    if (jj_scan_token(LPAR)) return true;
    return false;
  }

  static private boolean jj_3R_14()
 {
    if (jj_scan_token(Bool)) return true;
    return false;
  }

  static private boolean jj_3R_13()
 {
    if (jj_scan_token(Num)) return true;
    return false;
  }

  static private boolean jj_3R_12()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_13()) {
    jj_scanpos = xsp;
    if (jj_3R_14()) {
    jj_scanpos = xsp;
    if (jj_3R_15()) {
    jj_scanpos = xsp;
    if (jj_3R_16()) {
    jj_scanpos = xsp;
    if (jj_3R_17()) {
    jj_scanpos = xsp;
    if (jj_3R_18()) {
    jj_scanpos = xsp;
    if (jj_3R_19()) {
    jj_scanpos = xsp;
    if (jj_3R_20()) {
    jj_scanpos = xsp;
    if (jj_3R_21()) {
    jj_scanpos = xsp;
    if (jj_3R_22()) {
    jj_scanpos = xsp;
    if (jj_3R_23()) {
    jj_scanpos = xsp;
    if (jj_3R_24()) {
    jj_scanpos = xsp;
    if (jj_3R_25()) {
    jj_scanpos = xsp;
    if (jj_3R_26()) return true;
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3_2()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(22)) {
    jj_scanpos = xsp;
    if (jj_scan_token(23)) {
    jj_scanpos = xsp;
    if (jj_scan_token(20)) {
    jj_scanpos = xsp;
    if (jj_scan_token(21)) {
    jj_scanpos = xsp;
    if (jj_scan_token(18)) {
    jj_scanpos = xsp;
    if (jj_scan_token(24)) {
    jj_scanpos = xsp;
    if (jj_scan_token(25)) return true;
    }
    }
    }
    }
    }
    }
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_3R_26()
 {
    if (jj_scan_token(FUN)) return true;
    return false;
  }

  static private boolean jj_3R_25()
 {
    if (jj_scan_token(PRINTLN)) return true;
    return false;
  }

  static private boolean jj_3R_11()
 {
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public ParserTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private Token jj_scanpos, jj_lastpos;
  static private int jj_la;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[11];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x1c004ee0,0x3f40000,0x0,0x0,0x20000,0x40000000,0x1c004e20,0x0,0x0,0x40000000,0x1c004e20,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x27c,0x0,0x60,0x180,0x200,0x0,0x27c,0x8,0x8,0x0,0x27c,};
   }
  static final private JJCalls[] jj_2_rtns = new JJCalls[4];
  static private boolean jj_rescan = false;
  static private int jj_gc = 0;

  /** Constructor with InputStream. */
  public Parser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Parser(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new ParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public Parser(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new ParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }
